--- a/index.html
+++ b/index.html
@@ -21,25 +21,23 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <div class="menu d-flex justify-content-between align-items-center">
+                    <div class="menu">
                         <div class="imgbox">
                             <img src="assets/navbar-logo.svg" alt="">
                         </div>
-                        <div class="navbar">
-                            <nav>
-                                <a href="#">SERVICES</a>
-                                <a href="#">PORTFOLIO</a>
-                                <a href="#">ABOUT</a>
-                                <a href="#">TEAM</a>
-                                <a href="#">CONTACT</a>
-                            </nav>
-                        </div>
-                        <div class="menu-button d-flex align-items-center">
-                            <h6>Menu</h6>
+                        <div class="btn">
+                            <h5>MENU</h5>
                             <div class="icon">
                                 <i class="fa-solid fa-bars"></i>
                             </div>
                         </div>
+                        <nav>
+                            <a href="#services">SERVICES</a>
+                            <a href="#portfolio">PORTFOLIO</a>
+                            <a href="#about">ABOUT</a>
+                            <a href="#our">TEAM</a>
+                            <a href="#contact">CONTACT</a>
+                        </nav>
                     </div>
                 </div>
             </div>
@@ -65,48 +63,48 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
-                        <h1>SERVICES</h1>
-                        <h3>Lorem ipsum dolor sit amet consectetur.</h3>
+                        <div class="textbox text-center">
+                            <h1>SERVICES</h1>
+                            <h3>Lorem ipsum dolor sit amet consectetur.</h3>
+                        </div>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-md-4">
                         <div class="box">
-                            <div class="icon d-flex justify-content-center align-items-center">
+                            <div class="icon">
                                 <i class="fa-solid fa-cart-shopping"></i>
                             </div>
-                            <div class="textbox text-center">
-                                <h2>E-Commerce</h2>
-                                <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam
-                                    architecto
-                                    quo inventore harum ex magni, dicta impedit.</h4>
-                            </div>
+                        </div>
+                        <div class="textbox text-center">
+                            <h2>E-Commerce</h2>
+                            <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto
+                                quo inventore harum ex magni, dicta impedit.</h4>
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="box">
-                            <div class="icon d-flex justify-content-center align-items-center">
+                            <div class="icon">
                                 <i class="fa-solid fa-laptop"></i>
                             </div>
-                            <div class="textbox text-center">
-                                <h2>Responsive Design</h2>
-                                <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam
-                                    architecto
-                                    quo inventore harum ex magni, dicta impedit.</h4>
-                            </div>
+                        </div>
+                        <div class="textbox text-center">
+                            <h2>Responsive Design</h2>
+                            <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto
+                                quo inventore harum ex magni, dicta impedit.</h4>
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="box">
-                            <div class="icon d-flex justify-content-center align-items-center">
+                            <div class="icon">
                                 <i class="fa-solid fa-lock"></i>
                             </div>
-                            <div class="textbox text-center">
-                                <h2>Web Security</h2>
-                                <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam
-                                    architecto
-                                    quo inventore harum ex magni, dicta impedit.</h4>
-                            </div>
+                        </div>
+                        <div class="textbox text-center">
+                            <h2>Web Security</h2>
+                            <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam
+                                architecto
+                                quo inventore harum ex magni, dicta impedit.</h4>
                         </div>
                     </div>
                 </div>
@@ -436,26 +434,27 @@
     <footer>
         <div class="container">
             <div class="row">
-                <div class="col-md-12 ">
-                    <div class="footer-content">
-                        <div class="textb">
-                            <h1>Copyright © Your Website 2023</h1>
-                        </div>
-                        <div class="icon d-flex justify-content-center">
-                            <div class="icon-circle">
-                                <i class="fa-brands fa-twitter"></i>
-                            </div>
-                            <div class="icon-circle">
-                                <i class="fa-brands fa-facebook-f"></i>
-                            </div>
-                            <div class="icon-circle">
-                                <i class="fa-brands fa-linkedin-in"></i>
-                            </div>
-                        </div>
-                        <div class="textbox d-flex">
-                            <h2>Privacy Policy</h2>
-                            <h3>Terms of Use</h3>
-                        </div>
+                <div class="col-md-12">
+                    <div class="menu d-flex justify-content-between align-items-center">
+                        <a href="#">Copyright © Your Website 2024</a>
+                        <ul>
+                            <li>
+                                <div class="icon">
+                                    <i class="fa-brands fa-twitter"></i>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="icon">
+                                    <i class="fa-brands fa-facebook-f"></i>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="icon">
+                                    <i class="fa-brands fa-linkedin-in"></i>
+                                </div>
+                            </li>
+                        </ul>
+                        <a href="#">Privacy Policy <span>Terms of Use</span></a>
                     </div>
                 </div>
             </div>
