--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <section id="services">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-12">
+                    <div class="col-md-12 d-flex justify-content-center">
                         <div class="textbox text-center">
                             <h1>SERVICES</h1>
                             <h3>Lorem ipsum dolor sit amet consectetur.</h3>
