--- a/index.html
+++ b/index.html
@@ -21,21 +21,19 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <div class="menu">
+                    <div class="Menu d-flex justify-content-between align-items-center">
                         <div class="imgbox">
                             <img src="assets/navbar-logo.svg" alt="">
                         </div>
                         <div class="btn">
-                            <h5>MENU</h5>
-                            <div class="icon">
-                                <i class="fa-solid fa-bars"></i>
-                            </div>
+                            <h1>MENU</h1>
+                            <h2> <i class="fa-solid fa-bars"></i></h2>
                         </div>
                         <nav>
-                            <a href="#services">SERVICES</a>
+                            <a href="#services">SERVİCES</a>
                             <a href="#portfolio">PORTFOLIO</a>
                             <a href="#about">ABOUT</a>
-                            <a href="#our">TEAM</a>
+                            <a href="#team">TEAM</a>
                             <a href="#contact">CONTACT</a>
                         </nav>
                     </div>
