--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="textbox">
-                            <h1>welcome to our studio</h1>
+                            <h1>Welcome to our studio</h1>
                             <h2>IT'S NICE TO MEET YOU</h2>
                             <div class="btn">
                                 <h6>TELL ME MORE</h6>
